fix: align items

--- a/src/components/exercise/style.css
+++ b/src/components/exercise/style.css
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
     text-align: start;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
 }
 
 .log-list p:hover {
